objects/Account.object
<CustomObject>
    <fields>
        <fullName>ALV_Results__c</fullName>
        <label>ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALV_Status__c</fullName>
        <label>ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountParentName__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used only by JavaScript in AccountMessageInlinePage.</inlineHelpText>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alerts__c</fullName>
        <formula>Trust_Bits_Alert__c &amp; &quot; &quot; &amp; Mozilla_Audit_Alert_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_CA_Name_s__c</fullName>
        <inlineHelpText>Names must be separated by semicolon &apos;;&apos;</inlineHelpText>
        <label>Alternate CA Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_CRL__c</fullName>
        <inlineHelpText>Only fill this in if this certificate does not contain a CRL URL.</inlineHelpText>
        <label>Alternate CRL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Bug__c</fullName>
        <label>Mozilla Approval Bug</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audit_CP_CPS_Alert__c</fullName>
        <formula>IF (AND(Audits_Same_as_Parent__c = FALSE, 
        Standard_Audit__c = NULL,
        BR_Audit__c = NULL,
        EV_Audit__c = NULL), 
    IMAGE(&quot;/resource/Road_Work&quot;, &quot;Road Work&quot;) + &quot;Need Audit Statements&quot;, &quot;&quot;) +

IF (AND( CP_CPS_Same_as_Parent__c  = FALSE, 
         Certificate_Policy_CP_255_char__c = NULL,
         Certification_Practice_Stat_CPS_255_char__c = NULL), 
    IMAGE(&quot;/resource/Road_Work&quot;, &quot;Road Work&quot;) + &quot;Need CP/CPS&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit/CP/CPS Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Date_Alert_For_Intermediate_Cert__c</fullName>
        <description>For Intermediate certs check for audits and audit dates
- if std audit blank then flag error
- else if std stmt dt null or old then flag error
- else if br audit not blank &amp; br stmt dt null or old then flag error
- else if ev ssl audit not blank &amp; ev ssl stmt dt null or old then flag error
- else if ev code signing audit not blank &amp; ev code signing stmt dt null or old then flag error</description>
        <formula>IF (AND (RecordType.Name = &apos;Intermediate Certificate&apos;,  Audits_Same_as_Parent__c = False), 

/* Check if Standard Audit Missing and Standard Audit Date Expired */
IF(ISBLANK(Standard_Audit__c),IMAGE (&quot;/resource/Exclamation&quot;, &quot;Exclamation&quot;) &amp; &quot;StdAuditNull&quot;,
IF (ISBLANK (Standard_Audit_Statement_Date__c), IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;StdAuditDtNull&quot;, 
IF (Today() - Standard_Audit_Statement_Date__c &gt; 365,IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;StdAuditDt&gt;365&quot;, &quot;&quot;))) 
&amp; 
/* And check if BR Audit Date blank or old */
IF(NOT(ISBLANK(BR_Audit__c)), 
   IF(ISBLANK(BR_Audit_Statement_Date__c),
      IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;BRAuditDtNull&quot;,
         IF (Today() - BR_Audit_Statement_Date__c &gt; 365, 
             IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;BRAuditDt&gt;365&quot;,&quot;&quot;)),&quot;&quot;) 
&amp;
/* And check if EV SSL Audit Date blank */
IF(NOT(ISBLANK(EV_Audit__c)), 
   IF(ISBLANK(EV_Audit_Statement_Date__c),
      IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;EVSSLAuditDtNull&quot;,
         IF (Today() - EV_Audit_Statement_Date__c &gt; 365, 
             IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;EVSSLAuditDt&gt;365&quot;,&quot;&quot;)),&quot;&quot;) 
&amp;
/* And check if EV Code Signing Audit Date blank - THIS CHECK IS NOT NEEDED BY MOZILLA */
IF(NOT(ISBLANK(EV_Code_Signing_Audit__c)), 
   IF(ISBLANK(EV_Code_Signing_Audit_Statement_Date__c),
      IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;EVCodeSigningAuditDtNull&quot;,
         IF (Today() - EV_Code_Signing_Audit_Statement_Date__c &gt; 365, 
             IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;EVCodeSigningAuditDt&gt;365&quot;,&quot;&quot;)),&quot;&quot;) 
,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Intermediate Certs, show error messages for missing audit documents and missing/expired dates</inlineHelpText>
        <label>Audit Date Alert For Intermediate Cert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Date_Alert__c</fullName>
        <description>No flag- Standard Audit Statement Date is newer than 1 year ago 
Yellow Flag - Standard Audit Statement Date is older than 12 months, but not more than 18 months old
Red Flag - Standard Audit Statement Date is older than 18 months old, but not more than 2 years old
Exclamation - Standard Audit Statement Date is older than 2 years</description>
        <formula>IF (TODAY() - Standard_Audit_Statement_Date__c &gt; 730, 
   IMAGE(&quot;/resource/Exclamation&quot;, &quot;Exclamation&quot;), 
   IF ( TODAY() - Standard_Audit_Statement_Date__c &gt; 547,
      IMAGE(&quot;/resource/Flag_Red&quot;, &quot;Red flag&quot;), 
      IF ( TODAY() - Standard_Audit_Statement_Date__c &gt; 365,
         IMAGE(&quot;/resource/Flag_Yellow&quot;, &quot;Yellow flag&quot;), &quot; &quot;
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Date Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Date_Same__c</fullName>
        <formula>IF (Mozilla_Verified_Audit_Date__c = Standard_Audit_Statement_Date__c, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set field to false &apos;Mozilla Verified Audit Date&apos; is not the same as the &apos;Standard Audit Statement Date&apos;</inlineHelpText>
        <label>Audit Date Same?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Remainder_Days__c</fullName>
        <formula>TODAY() - Standard_Audit_Statement_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Remainder Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auditor_Location_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Country where the Auditor who issued the standard audit statement is based out of. See &apos;List All Auditors&apos; below for choices. Send email to support@ccadb.org if your auditor is not listed.</inlineHelpText>
        <label>Auditor Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Auditor_Location__c.Auditor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Auditor_New__c</valueField>
            </filterItems>
            <infoMessage>Not a valid value for selected Auditor Company</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Auditor_Location__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Name of Auditor who issued the standard audit statement. See &apos;List All Auditors&apos; below for choices. Send email to support@ccadb.org if your auditor is not listed.</inlineHelpText>
        <label>Auditor</label>
        <referenceTo>Auditor__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications_New__c</fullName>
        <formula>Auditor_Location_New__r.Auditor_Qualifications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</inlineHelpText>
        <label>Auditor Qualifications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications__c</fullName>
        <description>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</description>
        <inlineHelpText>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</inlineHelpText>
        <label>Auditor Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor_Website_New__c</fullName>
        <formula>Auditor_New__r.Auditor_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>URL to information about this Auditor</inlineHelpText>
        <label>Auditor Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Website__c</fullName>
        <description>URL to information about this Auditor</description>
        <inlineHelpText>URL to information about this Auditor</inlineHelpText>
        <label>Auditor Website</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <description>Name of Auditor who issued the Standard Audit Statement</description>
        <inlineHelpText>Name of Auditor who issued the Standard Audit Statement</inlineHelpText>
        <label>Auditor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audits_Same_as_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click this box if the current or next audit of the parent cert includes this cert. If you click this box do NOT enter data into the other fields in this section.</description>
        <inlineHelpText>Click this box if the current or next audit of the parent cert includes this cert. If you click this box do NOT enter data into the other fields in this section.</inlineHelpText>
        <label>Audits Same as Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Audit_ALV_Comments__c</fullName>
        <label>BR Audit ALV Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_ALV_Results__c</fullName>
        <label>BR Audit ALV Results</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_ALV_Status__c</fullName>
        <label>BR Audit ALV Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the period of time of CA operations examined by the auditor. Audit Periods must not exceed one year in duration and must be contiguous.</inlineHelpText>
        <label>BR Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Period_Start_Date__c</fullName>
        <description>Start date of the period of time of CA operations examined by the auditor.</description>
        <inlineHelpText>Start date of the period of time of CA operations examined by the auditor.</inlineHelpText>
        <label>BR Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Seal_ID__c</fullName>
        <inlineHelpText>Store Seal ID to map the Report ID in CPACanada Files object</inlineHelpText>
        <label>BR Audit Seal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date__c</fullName>
        <description>Date BR Audit Statement Issued</description>
        <inlineHelpText>Date BR Audit Statement Issued</inlineHelpText>
        <label>BR Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Internal_Link__c</fullName>
        <label>BR Audit Statement (Internal Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Type__c</fullName>
        <label>BR Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit_Update_Message__c</fullName>
        <label>BR Audit Update Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Update_Status__c</fullName>
        <label>BR Audit Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit__c</fullName>
        <description>If able to issue SSL/TLS certs, then URL to Baseline Requirements audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>If able to issue SSL/TLS certs, then URL to Baseline Requirements audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>BR Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>BR Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_Constraints__c</fullName>
        <label>DELETE Basic Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Comments__c</fullName>
        <label>CA Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Document_Repository__c</fullName>
        <description>URL to where policy documentation specific to this cert may be found</description>
        <inlineHelpText>URL to where policy documentation specific to this cert may be found</inlineHelpText>
        <label>CA Document Repository</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_1__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 are used to reach more than one person in your organization tol receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>CA Email Alias 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_2__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 are used to reach more than one person in your organization tol receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>CA Email Alias 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Certificate_No__c</fullName>
        <displayFormat>A{000000}</displayFormat>
        <externalId>true</externalId>
        <label>CA Owner/Certificate No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CA_Owner_ID__c</fullName>
        <description>This field stores the CA Owner ID - top level in hierarchy. It is updated by workflow - field update.</description>
        <inlineHelpText>This field stores the CA Owner ID - top level in hierarchy. It is updated by workflow - field update.</inlineHelpText>
        <label>CA Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Microsoft_Status__c</fullName>
        <description>This formula field derives root status from parent of &apos;Root Cert Id&apos; field. &apos;Root Cert Id&apos; is populated for all intermediate certs by PublicAllIntermediateCerts batch program.</description>
        <formula>TEXT(Root_Cert_Id__r.Parent.Microsoft_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field derives root status from parent of &apos;Root Cert Id&apos; field. &apos;Root Cert Id&apos; is populated for all intermediate certs by PublicAllIntermediateCerts batch program.</inlineHelpText>
        <label>CA Owner - Microsoft Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Mozilla_Status__c</fullName>
        <description>This formula field derives root status from parent of &apos;Root Cert Id&apos; field. &apos;Root Cert Id&apos; is populated for all intermediate certs by PublicAllIntermediateCerts batch program.</description>
        <formula>TEXT(Root_Cert_Id__r.Parent.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field derives root status from parent of &apos;Root Cert Id&apos; field. &apos;Root Cert Id&apos; is populated for all intermediate certs by PublicAllIntermediateCerts batch program.</inlineHelpText>
        <label>CA Owner - Mozilla Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Name__c</fullName>
        <formula>HYPERLINK(Parent.Id, Parent.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Status__c</fullName>
        <formula>Name + &apos; (Status:&apos; + Status_In_Text__c + &apos;) &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner &amp; Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner__c</fullName>
        <description>This field shows the CA Owner - top level in hierarchy.</description>
        <inlineHelpText>This field shows the CA Owner - top level in hierarchy.</inlineHelpText>
        <label>CA Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Owner_for_Running_User__c</fullName>
        <formula>$User.CA_Owner_for_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner for Running User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_CPS_Date_Alert_For_Intermediate_Cert__c</fullName>
        <description>For Intermediate Certs check for policy documents and dates:
If record type = Intermediate Certificate and CP CPS Same as Parent  = False then
   Check if CertificatePolicy and Certification Practice Statement then show error 
              else if CP CPS Last Updated Date is null then show error
                    else if CP CPS Last Updated Date older by 365 days the show error</description>
        <formula>IF (AND (RecordType.Name = &apos;Intermediate Certificate&apos;, CP_CPS_Same_as_Parent__c = False),
    IF (AND (ISBLANK (Certificate_Policy_CP_255_char__c), 
             ISBLANK(Certification_Practice_Stat_CPS_255_char__c)),
             IMAGE (&quot;/resource/Exclamation&quot;, &quot;Exclamation&quot;) &amp; &quot;CPAndCPSNull&quot;,
                  IF (ISBLANK(CP_CPS_Last_Updated_Date__c),
                      IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;CPCPSLastUpdateDtNull&quot;, 
IF (Today() - CP_CPS_Last_Updated_Date__c &gt; 365,
                      IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &quot;CPCPSLastUpdateDt&gt;365&quot;, &quot;&quot;)
))
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Intermediate Certs, show error messages for missing policy documents and missing/expired dates</inlineHelpText>
        <label>CP/CPS Date Alert For Intermediate Cert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_CPS_Last_Updated_Date__c</fullName>
        <label>CP/CPS Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_CPS_Same_as_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click this box if this cert does not have separate policy documentation from the parent cert. If you click this box do NOT enter data into the other fields in this section.</description>
        <inlineHelpText>Click this box if this cert does not have separate policy documentation from the parent cert. If you click this box do NOT enter data into the other fields in this section.</inlineHelpText>
        <label>CP/CPS Same as Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRL_URL_s_OLD__c</fullName>
        <label>CRL URL(s) OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRL_URL_s__c</fullName>
        <inlineHelpText>URL(s) at which the CRL(s) may be obtained -- for end-entity certs and for intermediate CAs.</inlineHelpText>
        <label>CRL URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificateIssuerOrganizationalUntMatch__c</fullName>
        <formula>IF ( Certificate_Issuer_Organizational_Unit__c 
 = Certificate_IssuerOrganizationalUnit_OLD__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CertificateIssuerOrganizationalUntMatch?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificateSubjectOrganizationUnitMatch__c</fullName>
        <formula>IF (Certificate_Subject_Organization_Unit__c  = Certificate_Subject_Organization_UnitOLD__c , &quot;YES&quot;,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CertificateSubjectOrganizationUnitMatch?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_ID_Match__c</fullName>
        <formula>IF ( Subject_SPKI_SHA256__c = SUBSTITUTE(Certificate_ID_OLD__c,&quot;:&quot;,&quot;&quot;), &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate ID Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_ID_OLD__c</fullName>
        <label>Certificate ID OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_ID__c</fullName>
        <inlineHelpText>Identifies same logical certificate in different CA Hierarchies. SHA-256(der(subject) + der(spki))</inlineHelpText>
        <label>DELETE Certificate ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_IssuerOrganizationalUnit_OLD__c</fullName>
        <label>Certificate IssuerOrganizationalUnit OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Common_Name_Match__c</fullName>
        <formula>IF (Certificate_Issuer_Common_Name__c = Certificate_Issuer_Common_Name_OLD__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Issuer Common Name Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Common_Name_OLD__c</fullName>
        <label>Certificate Issuer Common Name OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Common_Name__c</fullName>
        <label>Certificate Issuer Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Organization_Match__c</fullName>
        <formula>IF (Certificate_Issuer_Organization__c = Certificate_Issuer_Organization_OLD__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Issuer Organization Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Organization_OLD__c</fullName>
        <label>Certificate Issuer Organization OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Organization__c</fullName>
        <label>Certificate Issuer Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Organizational_Unit__c</fullName>
        <label>Certificate Issuer Organizational Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <description>This field is hyperlink to Account Name. Mainly used in reports.</description>
        <formula>HYPERLINK(Id, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Policy_CP_255_char__c</fullName>
        <description>This field shows first 255 characters of long type Certificate Policy (CP)</description>
        <inlineHelpText>This field shows first 255 characters of long type Certificate Policy (CP)</inlineHelpText>
        <label>Certificate Policy (CP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Policy_CP__c</fullName>
        <description>URL to Certificate Policy documentation specific to this cert. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>URL to Certificate Policy documentation specific to this cert. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>Certificate Policy (CP)</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Serial_Number_Match__c</fullName>
        <formula>IF (Certificate_Serial_Number__c = UPPER(Certificate_Serial_Number_OLD__c), &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Serial Number Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Serial_Number_OLD__c</fullName>
        <label>Certificate Serial Number OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Serial_Number__c</fullName>
        <label>Certificate Serial Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Common_Name_Match__c</fullName>
        <formula>IF (Certificate_Subject_Common_Name__c = Certificate_Subject_Common_Name_OLD__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Subject Common Name Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Common_Name_OLD__c</fullName>
        <label>Certificate Subject Common Name OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Common_Name__c</fullName>
        <description>&apos;CA Owner/Certificate Name&apos; must be same as &apos;Certificate Subject Common Name&apos;</description>
        <inlineHelpText>&apos;CA Owner/Certificate Name&apos; must be same as &apos;Certificate Subject Common Name&apos;</inlineHelpText>
        <label>Certificate Subject Common Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Organization_Match__c</fullName>
        <formula>IF (Certificate_Subject_Organization__c = Certificate_Subject_Organization_OLD__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Subject Organization Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Organization_OLD__c</fullName>
        <label>Certificate Subject Organization OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Organization_UnitOLD__c</fullName>
        <label>Certificate Subject Organization UnitOLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Organization_Unit__c</fullName>
        <label>Certificate Subject Organization Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Organization__c</fullName>
        <label>Certificate Subject Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Version__c</fullName>
        <label>Certificate Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Practice_Stat_CPS_255_char__c</fullName>
        <description>This field shows first 255 characters of long type Certificate Practice(CPS)</description>
        <inlineHelpText>This field shows first 255 characters of long type Certificate Practice(CPS)</inlineHelpText>
        <label>Certification Practice Statement (CPS)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Practice_Statement_CPS__c</fullName>
        <description>URL to CPS specific to this cert. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>URL to CPS specific to this cert. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>Certification Practice Statement (CPS)</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Country_of_Origin__c</fullName>
        <label>Cisco Country of Origin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Date_of_First_Inclusion__c</fullName>
        <label>Cisco Date of First Inclusion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cisco_Do_NOT_Send_Audit_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cisco Do NOT Send Audit Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cisco_Friendly_Name__c</fullName>
        <label>Cisco Friendly Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Root_Certificate_Download_URL__c</fullName>
        <label>Cisco Root Certificate Download URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Signature_Hash__c</fullName>
        <label>Cisco Signature Hash</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Status__c</fullName>
        <label>Cisco Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Included</fullName>
                    <default>true</default>
                    <label>Not Yet Included</label>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Trust_Bits__c</fullName>
        <label>Cisco Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD .</fullName>
                </value>
                <value>
                    <fullName>TBD ..</fullName>
                </value>
                <value>
                    <fullName>TBD ...</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>